# legend-of-legaia-re

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  NOTICE  README.md  RECONCILE.md  WAVE-3-PLAN.md  WAVE-4-PLAN.md  WAVE-5-PLAN.md  WAVE-6-PLAN.md  WAVE-7-PLAN.md  WAVE-8-PLAN.md  docker-compose.yml
crates/anm/: Cargo.toml  README.md
crates/anm/src/: lib.rs  player.rs
crates/anm/tests/: anm_fuzz.rs
crates/art/: Cargo.toml  README.md
crates/art/src/: arts_table.rs  arts_voice.rs  lib.rs  miracle.rs  parse.rs  power.rs  queue.rs  recognize.rs  record.rs  super_art.rs  tables.rs
crates/art/tests/: arts_table_real.rs
crates/asset/: Cargo.toml  README.md
crates/asset-viewer/: Cargo.toml  README.md
crates/asset-viewer/src/: battle_app.rs  browser.rs  cli.rs  common.rs  dialog_app.rs  display.rs  field_app.rs  loaders.rs  main.rs  seq_play.rs  stage_view.rs  tmd_view.rs  world_app.rs
crates/asset/data/: static-overlays.toml
crates/asset/examples/: cross_check_ffff.rs  monster_move_tags.rs
crates/asset/src/: accessory_passive.rs  anm_detect.rs  baka_fighter_pack.rs  baka_opponents.rs  battle_camera_table.rs  battle_char_assembly.rs  battle_char_pack.rs  battle_char_palette.rs  battle_data_pack.rs  befect_cluster.rs  boot_overlay.rs  categorize.rs  character_gltf.rs  character_pack.rs  clut_walk.rs  cutscene_text.rs  dance_art.rs  dance_cast.rs  dance_chart.rs  data_field_truncated.rs  effect_bundle.rs  element_affinity.rs  equip_stats.rs  face_anim.rs  field_char_textures.rs  field_disasm.rs  field_objects.rs  field_pack.rs  fishing_exchange.rs  fishing_species.rs  fmv_dispatch.rs  init_pak.rs  inn_costs.rs  interior_page.rs  item_effect.rs  item_names.rs  kingdom_bundle.rs  level_up_tables.rs  lib.rs  man_edit.rs  (+51 more)
crates/asset/tests/: accessory_passive_real.rs  asset_fuzz.rs  baka_fighter_pack_real.rs  baka_opponents_real.rs  baka_presentation_real.rs  battle_camera_table_real.rs  battle_char_assembly_real.rs  battle_char_pack_real.rs  battle_char_palette_real.rs  battle_data_pack_real.rs  befect_cluster_real.rs  boot_overlay_disc.rs  categorize_coverage.rs  character_pack_real.rs  clut_walk_real.rs  dance_art_real.rs  dance_chart_real.rs  element_affinity_real.rs  enemy_stager_real.rs  equip_stats_real.rs  face_anim_real.rs  field_char_textures_real.rs  field_pack_real.rs  fishing_exchange_real.rs  fishing_species_real.rs  fmv_dispatch_real.rs  inn_costs_disc.rs  interior_page_real.rs  item_effect_real.rs  item_names_real.rs  level_up_tables_real.rs  lzs_compress_roundtrip_real.rs  man_section_corpus.rs  menu_windows_real.rs  mode_table_real.rs  monster_archive_real.rs  monster_cross_table_integrity.rs  move_fx_records_real.rs  move_power_real.rs  muscle_dome_real.rs  (+29 more)
crates/cheats/: Cargo.toml  README.md
crates/cheats/src/: classify.rs  gs_text.rs  lib.rs  mednafen_cht.rs  taxonomy.rs
crates/cheats/tests/: data_files.rs
crates/engine-audio/: Cargo.toml  README.md
crates/engine-audio/src/: footstep.rs  lib.rs  note_trace.rs  seq_slots.rs  sequencer.rs  sfx.rs  sfx_ring.rs  shout.rs  vab_bind.rs  webaudio.rs
crates/engine-audio/tests/: bgm_director_chain.rs  real_bgm_chain.rs  real_seq_1045_truncation.rs  real_seq_expressive_events.rs  real_seq_program_change_coverage.rs  real_seq_stream_integrity.rs  real_vab_program_mapping.rs  real_vab_tone_attributes.rs  seq_vab_spu_chain.rs  vab_smoke.rs
crates/engine-core/: Cargo.toml  README.md
crates/engine-core/examples/: dump_map_objects.rs  dump_prop_scripts.rs  scan_4c_d8.rs  scan_door_triggers.rs  scan_scene_transitions.rs  scan_vdf_chunks.rs
crates/engine-core/src/: accessory_passives.rs  actor_alloc_host.rs  ap_gauge.rs  art_strike.rs  baka_fighter.rs  baka_fighter_chrome.rs  battle_anim.rs  battle_arts.rs  battle_events.rs  battle_flow.rs  battle_hud.rs  battle_input.rs  battle_magic.rs  battle_round.rs  battle_runner.rs  battle_seats.rs  battle_session.rs  battle_stats.rs  battle_tutorial.rs  camera.rs  capture_observations.rs  card_bu_io.rs  card_flow.rs  cd_dma.rs  cheat_applier.rs  chunk_install.rs  clut_fx.rs  cutscene.rs  cutscene_caption.rs  cutscene_narration.rs  cutscene_script_elements.rs  cutscene_timeline.rs  dance.rs  dance_tutorial.rs  debug_char_editor.rs  dev_menu.rs  dev_menu_host.rs  dialog.rs  encounter.rs  encounter_man.rs  (+91 more)
crates/engine-core/tests/: accessory_passives_disc.rs  animation_chain.rs  arts_randomizer_runtime_e2e.rs  baka_minigame_real.rs  baka_tally_world.rs  battle_anim_real.rs  battle_attack_integration.rs  battle_camera_framing.rs  battle_camera_heights_disc.rs  battle_full_playthrough.rs  battle_player_driven.rs  battle_real_data_chain.rs  battle_scene_smoke.rs  battle_seats_disc.rs  battle_shout_cue.rs  battle_stage_entries_real.rs  battle_swing_anim_disc.rs  battle_tutorial_disc.rs  cd_dma_real_prot.rs  chapter2_sebucus_hub_sweep_disc.rs  chapter2_sebucus_spine_oracle.rs  chapter3_karisto_spine_oracle.rs  chest_randomizer_runtime_e2e.rs  cold_boot_default_party_disc.rs  cutscene_timeline_synthetic.rs  dance_minigame_real.rs  door_randomizer_runtime_e2e.rs  effect_catalog_real.rs  effect_world_real_efect.rs  encounter_man_real.rs  encounter_randomizer_runtime_e2e.rs  (+134 more)
crates/engine-render/: Cargo.toml  README.md
crates/engine-shell/: Cargo.toml  README.md
crates/engine-ui/: Cargo.toml  README.md
crates/engine-vm/: Cargo.toml  README.md
crates/extract/: Cargo.toml  README.md
crates/font/: Cargo.toml  README.md
crates/gamedata/: Cargo.toml  README.md
crates/iso/: Cargo.toml  README.md
crates/mdec/: Cargo.toml  README.md
crates/mdt/: Cargo.toml  README.md
crates/mednafen/: Cargo.toml  README.md
crates/mes/: Cargo.toml  README.md
crates/patcher/: Cargo.toml  README.md
crates/pcsxr/: Cargo.toml  README.md
crates/prot/: Cargo.toml  README.md
crates/rando/: Cargo.toml  README.md
crates/save/: Cargo.toml  README.md
crates/seq/: Cargo.toml  README.md
crates/tim/: Cargo.toml  README.md
crates/tmd/: Cargo.toml  README.md
crates/vab/: Cargo.toml  README.md
crates/web-viewer/: Cargo.toml  README.md
(+1884 files in other folders)
