[workspace]
resolver = "3"
members = ["crates/iso", "crates/prot", "crates/lzs", "crates/asset", "crates/tmd", "crates/tim", "crates/xa", "crates/vab", "crates/mdt", "crates/mes", "crates/anm", "crates/seq", "crates/font", "crates/save", "crates/extract", "crates/engine-core", "crates/engine-render", "crates/engine-audio", "crates/engine-vm", "crates/asset-viewer", "crates/web-viewer"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Unlicense"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
flate2 = "1"
glam = { version = "0.30", features = ["bytemuck"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = "thin"
codegen-units = 1
