[workspace]
resolver = "3"
members = ["crates/iso", "crates/prot", "crates/lzs", "crates/bytes", "crates/asset", "crates/tmd", "crates/tim", "crates/xa", "crates/vab", "crates/mdt", "crates/mes", "crates/anm", "crates/seq", "crates/font", "crates/save", "crates/extract", "crates/patcher", "crates/mdec", "crates/art", "crates/mednafen", "crates/pcsxr", "crates/cheats", "crates/gamedata", "crates/engine-core", "crates/engine-ui", "crates/engine-render", "crates/engine-audio", "crates/engine-vm", "crates/engine-shell", "crates/asset-viewer", "crates/web-viewer"]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT OR Unlicense"

[workspace.dependencies]
anyhow = "1"
legaia-bytes = { path = "crates/bytes" }
clap = { version = "4", features = ["derive"] }
flate2 = "1"
glam = { version = "0.30", features = ["bytemuck"] }
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = "thin"
codegen-units = 1

# Test profile. Same optimisation level as release - the parity oracles and disc
# walks are slow enough at `opt-level = 0` to change what is practical to run -
# but without the whole-program link-time work, which buys nothing for a test
# binary that is built once and run once. Shipped binaries stay on `release`.
[profile.release-test]
inherits = "release"
lto = false
codegen-units = 16
