[package]
name = "legaia-anm"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "legaia_anm"
path = "src/lib.rs"

[[bin]]
name = "anm"
path = "src/bin/anm.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
