[package]
name = "legaia-art"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "legaia_art"
path = "src/lib.rs"

[[bin]]
name = "art"
path = "src/bin/art.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
