[package]
name = "legaia-asset"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "legaia_asset"
path = "src/lib.rs"

[[bin]]
name = "asset"
path = "src/bin/asset.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
legaia-anm = { path = "../anm" }
legaia-bytes.workspace = true
legaia-lzs = { path = "../lzs" }
legaia-prot = { path = "../prot" }
legaia-tim = { path = "../tim" }
legaia-tmd = { path = "../tmd" }
# `minigame_sfx` decodes the minigame cue banks (efect.dat descriptors -> VAB
# voices -> PCM), so the VAB reader is a real dependency, not just a test one.
legaia-vab = { path = "../vab" }
png = "0.17"
sha2 = "0.10"
toml = { version = "0.8", default-features = false, features = ["parse"] }

[dev-dependencies]
legaia-seq = { path = "../seq" }
