[package]
name = "legaia-cheats"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "legaia_cheats"
path = "src/lib.rs"

[[bin]]
name = "cheat-tool"
path = "src/bin/cheat-tool.rs"

[dependencies]
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
