[package]
name = "legaia-engine-audio"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "legaia_engine_audio"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
cpal = "0.15"
log = "0.4"
legaia-xa = { path = "../xa" }
legaia-vab = { path = "../vab" }
legaia-seq = { path = "../seq" }
