[package]
name = "legaia-engine-audio"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "legaia_engine_audio"
path = "src/lib.rs"

[features]
default = []
# Activates the WebAudio backend for wasm32 targets. Enables a
# `WebAudioOut` struct (ScriptProcessorNode-based) that mirrors the
# `AudioOut` cpal API. Must be initialised from a user-gesture handler.
audio-webaudio = []

[dependencies]
anyhow.workspace = true
cpal = "0.15"
log = "0.4"
legaia-xa = { path = "../xa" }
legaia-vab = { path = "../vab" }
legaia-seq = { path = "../seq" }

# WebAudio deps - pulled in on all wasm32 builds; only wired up when
# audio-webaudio feature is enabled (gates the webaudio module).
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
version = "0.3"
features = [
    "AudioContext",
    "ScriptProcessorNode",
    "AudioProcessingEvent",
    "AudioBuffer",
    "AudioNode",
    "AudioDestinationNode",
    "AudioParam",
    "GainNode",
]

[dev-dependencies]
legaia-prot = { path = "../prot" }
