[package]
name = "legaia-engine-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "legaia_engine_core"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
log = "0.4"
legaia-engine-vm = { path = "../engine-vm" }
legaia-asset = { path = "../asset" }
legaia-font = { path = "../font" }
legaia-lzs = { path = "../lzs" }
legaia-mes = { path = "../mes" }
legaia-prot = { path = "../prot" }
legaia-seq = { path = "../seq" }
legaia-vab = { path = "../vab" }
legaia-save = { path = "../save" }
