[package]
name = "legaia-engine-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "legaia_engine_core"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
log = "0.4"
serde.workspace = true
toml = "0.8"
legaia-engine-vm = { path = "../engine-vm" }
legaia-asset = { path = "../asset" }
legaia-font = { path = "../font" }
legaia-lzs = { path = "../lzs" }
legaia-mes = { path = "../mes" }
legaia-prot = { path = "../prot" }
legaia-seq = { path = "../seq" }
legaia-tim = { path = "../tim" }
legaia-tmd = { path = "../tmd" }
legaia-vab = { path = "../vab" }
legaia-anm = { path = "../anm" }
legaia-save = { path = "../save" }

[dev-dependencies]
tempfile = "3"
