[package]
name = "legaia-engine-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "legaia_engine_core"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
log = "0.4"
serde.workspace = true
toml = "0.8"
legaia-engine-vm = { path = "../engine-vm" }
legaia-asset = { path = "../asset" }
legaia-font = { path = "../font" }
legaia-iso = { path = "../iso" }
legaia-lzs = { path = "../lzs" }
legaia-mdt = { path = "../mdt" }
legaia-mes = { path = "../mes" }
legaia-prot = { path = "../prot" }
legaia-seq = { path = "../seq" }
legaia-tim = { path = "../tim" }
legaia-tmd = { path = "../tmd" }
legaia-vab = { path = "../vab" }
legaia-anm = { path = "../anm" }
legaia-art = { path = "../art" }
legaia-save = { path = "../save" }
legaia-cheats = { path = "../cheats" }

[dev-dependencies]
tempfile = "3"
# Disc-gated runtime oracle for the chest randomizer: patch a real disc's MAN in
# memory, then drive the patched bytes through the field VM. rando depends only
# on asset/lzs/prot/iso (never engine-core), so this dev-only edge is acyclic.
legaia-rando = { path = "../rando" }
