[package]
name = "legaia-engine-shell"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "legaia-engine"
path = "src/bin/legaia-engine.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
log = "0.4"
env_logger = "0.11"
legaia-engine-core = { path = "../engine-core" }
legaia-prot = { path = "../prot" }
