[package]
name = "legaia-engine-shell"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "legaia-engine"
path = "src/bin/legaia-engine.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
log = "0.4"
env_logger = "0.11"
legaia-art = { path = "../art" }
legaia-asset = { path = "../asset" }
legaia-cheats = { path = "../cheats" }
legaia-engine-core = { path = "../engine-core" }
legaia-engine-audio = { path = "../engine-audio" }
legaia-engine-render = { path = "../engine-render" }
legaia-prot = { path = "../prot" }
legaia-save = { path = "../save" }
legaia-seq = { path = "../seq" }
legaia-vab = { path = "../vab" }
legaia-tim = { path = "../tim" }
legaia-tmd = { path = "../tmd" }
legaia-font = { path = "../font" }
legaia-mdec = { path = "../mdec" }
legaia-mednafen = { path = "../mednafen" }
glam.workspace = true
png = "0.17"
winit = "0.30"
