[package]
name = "legaia-engine-ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "legaia_engine_ui"
path = "src/lib.rs"

[dependencies]
bytemuck = { version = "1", features = ["derive"] }
glam.workspace = true
legaia-asset = { path = "../asset" }
legaia-font = { path = "../font" }
legaia-tim = { path = "../tim" }
serde.workspace = true
serde_json.workspace = true
