[package]
name = "legaia-engine-vm"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "legaia_engine_vm"
path = "src/lib.rs"

[[bin]]
name = "field-disasm"
path = "src/bin/field_disasm.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
legaia-art = { path = "../art" }
legaia-anm = { path = "../anm" }
legaia-asset = { path = "../asset" }
legaia-prot = { path = "../prot" }

# SIGPIPE reset in the bin's main() so piping stdout into `head` exits
# quietly instead of panicking on a broken pipe.
[target.'cfg(unix)'.dependencies]
libc = "0.2"
