[package]
name = "legaia-extract"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "legaia-extract"
path = "src/bin/legaia-extract.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
rayon.workspace = true
serde_json.workspace = true
sha2 = "0.10"
legaia-iso = { path = "../iso" }
legaia-prot = { path = "../prot" }
legaia-asset = { path = "../asset" }
legaia-lzs = { path = "../lzs" }
legaia-tim = { path = "../tim" }
legaia-tmd = { path = "../tmd" }
legaia-xa = { path = "../xa" }
