[package]
name = "legaia-font"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "legaia_font"
path = "src/lib.rs"

[[bin]]
name = "font-extract"
path = "src/bin/font-extract.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
flate2.workspace = true
serde.workspace = true
serde_json.workspace = true
png = "0.17"
