[package]
name = "legaia-gamedata"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Curated game-data tables for Legend of Legaia (arts, magic, items, weapons, armor, accessories, enemies, shops, casino, fishing) mined from public walkthroughs and exposed as typed Rust accessors."

[lib]
name = "legaia_gamedata"
path = "src/lib.rs"

[[bin]]
name = "gamedata-tool"
path = "src/bin/gamedata-tool.rs"

[dependencies]
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = { version = "0.8", default-features = false, features = ["parse"] }
legaia-art = { path = "../art" }

[dev-dependencies]
legaia-asset = { path = "../asset" }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
