[package]
name = "legaia-mdt"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "legaia_mdt"
path = "src/lib.rs"

[[bin]]
name = "mdt"
path = "src/bin/mdt.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
