[package]
name = "legaia-mednafen"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "legaia_mednafen"
path = "src/lib.rs"

[[bin]]
name = "mednafen-state"
path = "src/bin/mednafen-state/main.rs"

[dependencies]
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
flate2.workspace = true
legaia-asset = { path = "../asset" }
legaia-cheats = { path = "../cheats" }
png = "0.17"
serde = { version = "1", features = ["derive"] }
serde_json.workspace = true
toml = "0.8"

[dev-dependencies]
legaia-engine-core = { path = "../engine-core" }
legaia-prot = { path = "../prot" }
