[package]
name = "legaia-patcher"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "legaia_patcher"
path = "src/lib.rs"

[[bin]]
name = "legaia-patcher"
path = "src/bin/legaia-patcher/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
legaia-lzs = { path = "../lzs" }
legaia-asset = { path = "../asset" }
legaia-art = { path = "../art" }
legaia-prot = { path = "../prot" }
legaia-iso = { path = "../iso" }
legaia-gamedata = { path = "../gamedata" }
serde.workspace = true
serde_yaml = "0.9"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
