[package]
name = "legaia-pcsxr"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "legaia_pcsxr"
path = "src/lib.rs"

[dependencies]
anyhow.workspace = true
flate2.workspace = true
legaia-mednafen = { path = "../mednafen" }

[dev-dependencies]
legaia-art = { path = "../art" }
