[package]
name = "legaia-prot"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "legaia_prot"
path = "src/lib.rs"

[[bin]]
name = "prot-extract"
path = "src/bin/prot-extract.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"
