[package]
name = "legaia-rando"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "legaia_rando"
path = "src/lib.rs"

[[bin]]
name = "legaia-rando"
path = "src/bin/legaia-rando/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
legaia-lzs = { path = "../lzs" }
legaia-asset = { path = "../asset" }
legaia-art = { path = "../art" }
legaia-prot = { path = "../prot" }
legaia-iso = { path = "../iso" }
legaia-gamedata = { path = "../gamedata" }
