[package]
name = "legaia-save"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "legaia_save"
path = "src/lib.rs"

[[bin]]
name = "save-tool"
path = "src/bin/save-tool.rs"

[dependencies]
anyhow.workspace = true
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
