[package]
name = "legaia-seq"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "legaia_seq"
path = "src/lib.rs"

[[bin]]
name = "seq"
path = "src/bin/seq.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
