[package]
name = "legaia-tmd"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "legaia_tmd"
path = "src/lib.rs"

[[bin]]
name = "tmd"
path = "src/bin/tmd.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
legaia-tim = { path = "../tim" }
