[package]
name = "legaia-vab"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "legaia_vab"
path = "src/lib.rs"

[[bin]]
name = "vab"
path = "src/bin/vab.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
legaia-xa = { path = "../xa" }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
