[package]
name = "legaia-web-viewer"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
legaia-tim = { path = "../tim" }
legaia-prot = { path = "../prot" }
legaia-asset = { path = "../asset" }
legaia-lzs = { path = "../lzs" }
legaia-tmd = { path = "../tmd" }
legaia-mes = { path = "../mes" }
legaia-seq = { path = "../seq" }
legaia-vab = { path = "../vab" }
legaia-engine-vm = { path = "../engine-vm" }
legaia-engine-core = { path = "../engine-core" }
legaia-engine-audio = { path = "../engine-audio", features = ["audio-webaudio"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"

[dependencies.web-sys]
version = "0.3"
features = [
    "console",
    "Window",
    "Document",
    "Element",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
]

[package.metadata.wasm-pack.profile.release]
wasm-opt = false
